15 July 2022: Wouter
	- Merge PR 714: Avoid treat normal hosts as unresponsive servers.
	  And fixup the lock code.
	- iana portlist update.

12 July 2022: George
	- For windows crosscompile, fix setting the IPV6_MTU socket option
	  equivalent (IPV6_USER_MTU); allows cross compiling with latest
	  cross-compiler versions.

12 July 2022: Wouter
	- Fix dname count in sldns parse type descriptor for SVCB and HTTPS.

11 July 2022: Wouter
	- Fix verbose EDE error printout.

4 July 2022: George
	- Fix bug introduced in 'improve val_sigcrypt.c::algo_needs_missing for
	  one loop pass'.
	- Merge PR #668 from Cristian Rodríguez: Set IP_BIND_ADDRESS_NO_PORT on
	  outbound tcp sockets.

4 July 2022: Wouter
	- Tag for 1.16.1rc1 release. This became 1.16.1 on 11 July 2022.
	  The code repo continues with version 1.16.2 under development.

3 July 2022: George
	- Merge PR #671 from Petr Menšík: Disable ED25519 and ED448 in FIPS
	  mode on openssl3.
	- Merge PR #660 from Petr Menšík: Sha1 runtime insecure.
	- For #660: formatting, less verbose logging, add EDE information.
	- Fix for correct openssl error when adding windows CA certificates to
	  the openssl trust store.
	- Improve val_sigcrypt.c::algo_needs_missing for one loop pass.
	- Reintroduce documentation and more EDE support for
	  val_sigcrypt.c::dnskeyset_verify_rrset_sig.

1 July 2022: George
	- Merge PR #706: NXNS fallback.
	- From #706: Cached NXDOMAIN does not increase the target nx
	  responses.
	- From #706: Don't generate parent side queries if we already
	  have the lame records in cache.
	- From #706: When a lame address is the best choice, don't try to
	  generate target queries when the missing targets are all lame.

29 June 2022: Wouter
	- iana portlist update.
	- Fix detection of libz on windows compile with static option.
	- Fix compile warning for windows compile.

29 June 2022: George
	- Add debug option to the mini_tdir.sh test code.