@@ -1,3 +1,6 @@
+19 July 2022: George
+	- Update documentation for 'outbound-msg-retry:'.
+
 15 July 2022: Wouter
 	- Merge PR 714: Avoid treat normal hosts as unresponsive servers.
 	  And fixup the lock code.
